function invocation error

--- a/vercel-host/package.json
+++ b/vercel-host/package.json
@@ -7,13 +7,14 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "vercel": "^24.0.0"
   }
 }
